4779.	[bug]		Expire NTA at the start of the second. Don't update
			the expiry value if the record has already expired
			after a successful check. [RT #46368]

4778.	[test]		Improve synth-from-dnssec testing. [RT #46352]

4777.	[cleanup]	Removed a redundant call to configure_view_acl().
			[RT #46369]

4776.	[bug]		Improve portability of ht_test. [RT #46333]

4775.	[bug]		Address Coverity warnings in ht_test.c and mem_test.c
			[RT #46281]

4774.	[bug]		<isc/util.h> was incorrectly included in several
			header files. [RT #46311]

4773.	[doc]		Fixed generating Doxygen documentation for functions
			annotated using certain macros.  Miscellaneous
			Doxygen-related cleanups. [RT #46276]

	--- 9.12.0b1 released ---

4772.	[test]		Expanded unit testing framework for libns, using
			hooks to interrupt query flow and inspect state
			at specified locations. [RT #46173]

4771.	[bug]		When sending RFC 5011 refresh queries, disregard
			cached DNSKEY rrsets. [RT #46251]

4770.	[bug]		Cache additional data from priming queries as glue.
			Previously they were ignored as unsigned
			non-answer data from a secure zone, and never
			actually got added to the cache, causing hints
			to be used frequently for root-server
			addresses, which triggered re-priming. [RT #45241]

4769.	[func]		The working directory and managed-keys directory has
			to be writeable (and seekable). [RT #46077]

4768.	[func]		By default, memory is no longer filled with tag values
			when it is allocated or freed; this improves
			performance but makes debugging of certain memory
			issues more difficult. "named -M fill" turns memory
			filling back on. (Building "configure
			--enable-developer", turns memory fill on by
			default again; it can then be disabled with
			"named -M nofill".) [RT #45123]

4767.	[func]		Add a new function, isc_buffer_printf(), which can be
			used to append a formatted string to the used region of
			a buffer. [RT #46201]
